wiki: fix search field not accepting space characters

Space is the default shortcut key for play/pause. Somehow it is triggered
even when entering in the line edit of the browser. This allows shortcut
keys to be overridden and pass to the widget.

BUG: 266591
FIXED-IN: 2.5